--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>Cursando graduação em Análise e Desenvolvimento de Sistemas na Faculdade Estácio de Campina Grande atualmente em transição de carreia.
+              Graduada em Direito pelo Centro Universitário de João Pessoa (UNIPÊ- 2018).
+              Graduada em Serviço Social pela Universidade Federal da Paraíba (UFPB- 2008).
+              Especialista em Gestão de Saúde Pública.
+              Atuou por mais de dez anos como Assistente Social e Gestora em saúde pública no Núcleo de Apoio à Saúde da Família (NASF) na Prefeitura Municipal de João Pessoa-PB.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -98,8 +102,8 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h5 class="w3-opacity"><b>Gerente de Sistema de Saúde</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01/03/2010 - <span class="w3-tag w3-teal w3-round">15/02/2021</span></h6>
               <p>TODO</p>
               <hr>
             </div>
@@ -123,15 +127,15 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="file:///C:/Users/grasi/OneDrive/%C3%81rea%20de%20Trabalho/Cursos%20DIO/Certificado%20Primeiros%20passos%20em%20JavaScript.pdf" target="_blank">Curso</a></li>
+                <li><a href="file:///C:/Users/grasi/OneDrive/%C3%81rea%20de%20Trabalho/Curso%20RECODE%20PRO/Certificado%20Hackathon%20Recode%202023.pdf" target="_blank">Curso</a></li>
+                <li><a href="file:///C:/Users/grasi/OneDrive/%C3%81rea%20de%20Trabalho/Cursos%20PrograMaria/Certificado%20Curso%20Back-end%20PrograMaria.pdf" target="_blank">Curso</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
+              <h5 class="w3-opacity"><b>Analise e Desenvolvimento de Sistemas</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>04/2022 - 09/2024</h6>
               <p>TODO</p>
             </div>
           </div>
